objects/Opportunity_Ebsta_Score__c.object
<CustomObject>
    <fields>
        <fullName>Ebsta_Score__c</fullName>
        <label>Ebsta Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>IF( User__c == Opportunity__r.Owner.Id , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Ebsta Scores</relationshipLabel>
        <relationshipName>Opportunity_Ebsta_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Ebsta_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Ebsta Score</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Opportunity Ebsta Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Ebsta Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>